force-app/src/objects/Annual_Figures__c.object
<CustomObject>
    <fields>
        <fullName>AYF_Record_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AYF Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AYF_Update_Form_for_Schools__c</fullName>
        <formula>HYPERLINK(&quot;https://survey.cois.org/s3/School-Academic-Year-Figures-Update?Id=&quot; &amp; Id ,&quot;AYF Update Form for Schools&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AYF Update Form for Schools</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AYF_Update_Form_for_Universities__c</fullName>
        <formula>HYPERLINK(&quot;https://survey.cois.org/s3/University-Academic-Year-Figures-Update?Id=&quot; &amp; Id ,&quot;AYF Update Form for Universities&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AYF Update Form for Universities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AYF_updated_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used for Pardot Dynamic List.</description>
        <label>AYF updated hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Academic_Year_Figures__c</fullName>
        <formula>IF( Account__r.Id = $User.Account_ID__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year Figures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Academic Year Figures</relationshipLabel>
        <relationshipName>Annual_Figures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AlchemerAYFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID generated by Alchemer, pushed to Salesforce via Alchemer-SF integration. This allows Alchemer to lookup the AYF again in the same survey</description>
        <externalId>true</externalId>
        <label>AlchemerAYFID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Annual_tuition_and_fees_home_undergrads__c</fullName>
        <inlineHelpText>Resident student: An enrolled student who is a citizen or resident of the country where the institution is located. For U.S. institutions with different rates for in-state/out-of-state students, please use out-of-state/non-resident. Convert to US Dollars.</inlineHelpText>
        <label>Tuition + fees, resident undergraduate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_tuition_and_fees_int_undergrads__c</fullName>
        <inlineHelpText>Annual tuition &amp; fees for international undergraduate students. For EU-based institutions, use non-EU student rates. Report in US Dollars.</inlineHelpText>
        <label>Tuition + fees, international undergrad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Senior_High_S_Grads_Current__c</fullName>
        <inlineHelpText>Number of High School graduates you anticipate in current academic year.</inlineHelpText>
        <label>Anticipated Graduates - Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Senior_High_School_Grads_NY__c</fullName>
        <inlineHelpText>Number of High School graduates you anticipate in the next academic year.</inlineHelpText>
        <label>Anticipated Graduates - Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Averagre_annual_housing_and_meal_costs__c</fullName>
        <description>Average annual housing and meal costs for undergraduate students</description>
        <inlineHelpText>Average annual housing and meal costs for undergraduate students. Report in US Dollars.</inlineHelpText>
        <label>Average annual housing and meal costs</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_ALL_Total_student_enrollment__c</fullName>
        <inlineHelpText>Total number of students across entire institution.</inlineHelpText>
        <label>Reported Enrolment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Athletic_scholarships__c</fullName>
        <inlineHelpText>Do you offer Athletic Scholarships?</inlineHelpText>
        <label>Athletic scholarships</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Average_ACT_composite_score__c</fullName>
        <inlineHelpText>For students admitted to the most recent class.</inlineHelpText>
        <label>Average ACT composite score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Average_SAT_combined_score__c</fullName>
        <inlineHelpText>For students admitted to the most recent class.</inlineHelpText>
        <label>Average SAT combined score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Average_Undergraduate_Class_Size__c</fullName>
        <label>Average Undergraduate Class Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Average_award_size_for_citizen__c</fullName>
        <inlineHelpText>What is the average financial aid award size for home country citizens/permanent residents. Report in US Dollars. For EU institutions, report amount for EU citizens studying within the EU. Convert amount to US Dollars.</inlineHelpText>
        <label>Average award size for citizens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Average_award_size_for_intern__c</fullName>
        <inlineHelpText>What is the average financial aid award size for international undergraduate students. Report in US Dollars. International student: An enrolled student who is not a citizen or resident of the country where the institution is located.</inlineHelpText>
        <label>Average award size for internationals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Average_fee_for_Senior_High_Schoo__c</fullName>
        <inlineHelpText>Average annual enrollment fee for Senior/High School. Convert to US Dollars.</inlineHelpText>
        <label>Average fee for Senior/High School (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Co_repr_in_undergrad_stud_enrollm__c</fullName>
        <inlineHelpText>Number of countries represented across undergraduate student enrollment.</inlineHelpText>
        <label># Countries Represented - Undergrad</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Do_you_offer_rolling_admission__c</fullName>
        <inlineHelpText>Do you offer rolling admission?</inlineHelpText>
        <label>Rolling admission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Int_undergrad_1years_enrolled__c</fullName>
        <inlineHelpText>Number of international undergraduate first-year students who enrolled/matriculated. International student: An enrolled student who is not a citizen of the country where the institution is located.</inlineHelpText>
        <label># Intl 1st Yr Enrolled/Matriculated</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Merit_financial_aid_for_citizens__c</fullName>
        <inlineHelpText>Do you offer undergraduate merit-based scholarships for home country citizens/permanent residents? For EU institutions, report amount for EU citizens studying within the EU.</inlineHelpText>
        <label>Merit-based scholarships - Citizens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Merit_financial_aid_for_intern__c</fullName>
        <inlineHelpText>Do you offer merit-based scholarships for international undergraduate students? International student: An enrolled student who is not a citizen or resident of the country where the institution is located.</inlineHelpText>
        <label>Merit-based scholarships - International</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Min_IELTS_score__c</fullName>
        <inlineHelpText>Only report if the institution has a minimum score and use standard IELTS score format (6.5 or 7 for example).</inlineHelpText>
        <label>Minimum IELTS score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Min_TOEFLiBT_score__c</fullName>
        <inlineHelpText>Only report if the institution has a minimum score.</inlineHelpText>
        <label>Minimum TOEFL iBT score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Miscellaneous_costs_in_US_Dollars__c</fullName>
        <inlineHelpText>Textbooks, health insurance, other living expenses. Report in US Dollars.</inlineHelpText>
        <label>Miscellaneous costs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Need_financial_aid_for_citizens__c</fullName>
        <inlineHelpText>Do you offer undergraduate need-based financial aid for home country citizens/permanent residents? For EU institutions, report amount for EU citizens studying within the EU.</inlineHelpText>
        <label>Need-based financial aid - Citizens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Need_financial_aid_for_inter__c</fullName>
        <inlineHelpText>Do you offer need-based financial aid for international undergraduate students? International student: An enrolled student who is not a citizen or resident of the country where the institution is located.</inlineHelpText>
        <label>Need-based financial aid - International</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Num_of_int_und_1year_app_received__c</fullName>
        <inlineHelpText>Number of international undergraduate first-year student applications received. International student: An enrolled student who is not a citizen or resident of the country where the institution is located</inlineHelpText>
        <label># Intl 1st Yr Applications Received</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Num_of_int_undgrad_1year_admitted__c</fullName>
        <inlineHelpText>Number of international undergraduate first-year students admitted. International student: An enrolled student who is not a citizen of the country where the institution is located.</inlineHelpText>
        <label># Intl 1st Yr Students Admitted</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Num_of_undergraduate_int_st__c</fullName>
        <inlineHelpText>Total number of undergraduate international students. International student: An enrolled student who is not a citizen or resident of the country where the institution is located.</inlineHelpText>
        <label># International Undergrad Students</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Undergrad_Student_Faculty_Ratio__c</fullName>
        <inlineHelpText>Enter value as # of students:#of faculty. For example, 20:1</inlineHelpText>
        <label>Undergraduate Student:Faculty Ratio</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSC_Country_1__c</fullName>
        <label>Graduates Country/Region 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSC_Country_2__c</fullName>
        <label>Graduates Country/Region 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSC_Country_3__c</fullName>
        <label>Graduates Country/Region 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Additional_boarding_fee_Euro__c</fullName>
        <inlineHelpText>Additional annual fee for boarding students. Convert to US Dollars.</inlineHelpText>
        <label>Additional boarding fee (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Average_fee_for_Early_Year__c</fullName>
        <inlineHelpText>Average annual enrollment fee for Early Childhood. Convert to US Dollars.</inlineHelpText>
        <label>Average fee for Early Childhood (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Average_fee_for_Elementary__c</fullName>
        <inlineHelpText>Average annual enrollment fee for Elementary/Primary. Convert to US Dollars.</inlineHelpText>
        <label>Average fee for Elementary (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Average_fee_for_Middle_School__c</fullName>
        <inlineHelpText>Average annual enrollment fee for Middle School. Convert to US Dollars.</inlineHelpText>
        <label>Average fee for Middle School (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Nationality_1__c</fullName>
        <label>Enrolled Student Country/Region 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Nationality_2__c</fullName>
        <label>Enrolled Student Country/Region 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>